# voxel-game

./: Cargo.toml  README.md
src/: block.rs  main.rs  player.rs  position.rs  registryresource.rs  terrain.rs  world.rs
src/block/: basicblock.rs  blockregistry.rs  chunk.rs  mesh.rs
src/chunk/: chunk.rs  mesh.rs
src/chunkworld/: mod.rs
src/debug/: mod.rs
src/debugtext/: mod.rs
src/position/: mod.rs  universe_location.rs  universe_position_math.rs  universe_transform.rs
src/settings/: mod.rs
src/terrain/: libnoise_gens.rs  noise.rs  terraingen.rs
src/world/: block.rs  block_materials.rs  chunkmap.rs  gen.rs  loading.rs  universe.rs
