[package]
name = "dirlaku"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
block-mesh = { git = "https://github.com/bonsairobo/block-mesh-rs", version = "0.2.0" }
noise = "0.9.0"
serde = "1.0.203"
rmp-serde = "1.3.0"
sled = "0.34.7"
lru = "0.12.3"
bevy_math = "0.14.0-rc.2"
bevy = "0.14.0-rc.2"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
