[package]
name = "dirlaku"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
block-mesh = { git = "https://github.com/bonsairobo/block-mesh-rs", version = "0.2.0" }
noise = "0.9.0"
libnoise = { version = "1.1.2", features = ["image"] }
splines = "4.3.1"
sled = { version = "0.34.7", features = ["compression"] }
bevy_math = "0.14.0-rc.3"
bevy = "0.14.0-rc.3"
futures-lite = "2.3.0"
parking_lot = "0.12.3"
byteorder = "1.5.0"
zerocopy = { version = "0.7.34", features = ["derive"] }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
